--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-header></app-header>
+<div role="main" class="main">
+    <app-carousel></app-carousel>
+</div>
 <router-outlet></router-outlet>
 
 
